# EAE_Firmware

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
include/eae_firmware/: CanBus.h  CliOptions.h  CoolingStateMachine.h  FirmwareController.h  PidController.h
scripts/: run_demo.ps1  run_demo.sh
src/: CanBus.cpp  CliOptions.cpp  CoolingStateMachine.cpp  FirmwareController.cpp  PidController.cpp  main.cpp
tests/: test_can_bus.cpp  test_firmware_controller.cpp  test_pid_controller.cpp  test_state_machine.cpp
